plugins {
    id 'java'
    id 'org.springframework.boot' version "${springStarter}"
    id 'io.spring.dependency-management' version "${dependencyManagement}"
}

group 'ru.home.examticketspring'
version '1.0-SNAPSHOT'

sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

configurations {
    all*.exclude module : 'spring-boot-starter-logging'
}

springBoot {
    mainClass = 'ru.home.examticketspring.ExamTicketSpringApplication'
}

// Замените блок jar на этот блок bootJar
bootJar {
    archiveBaseName = 'ExamTicketSpring'
    archiveVersion = '1.0-SNAPSHOT'
}

dependencies {
    implementation "org.springframework.boot:spring-boot-devtools:${springDevtools}"
    implementation "org.springframework.boot:spring-boot-starter:${springStarter}"
    implementation "org.springframework.boot:spring-boot-starter-web:${springStarter}"
    implementation "org.springframework.boot:spring-boot-starter-actuator:${springBootStarterActuator}"
    implementation "org.springframework.boot:spring-boot-starter-log4j2:${springStarter}"
    implementation "org.telegram:telegrambots-spring-boot-starter:${telegrambotsSpring}"
    annotationProcessor "org.projectlombok:lombok:${lombok}"
    compileOnly "org.projectlombok:lombok:${lombok}"
    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springDataJpa}"
    implementation "org.postgresql:postgresql:${postgresql}"

    testImplementation "org.springframework.boot:spring-boot-starter-test:${springStarterTest}"
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiter}"
    implementation "io.micrometer:micrometer-registry-prometheus:${micrometerRegistryPrometheus}"

    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'

}

test {
    useJUnitPlatform()
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}